src/app/home/home.page.scss
.fab-btn {
    --box-shadow: 0 2px 2px 0 hsla(0, 0%, 0%, 0.2);
    margin: 0 0 0 8px;

    &--white {
        --background: var(
            --ion-toolbar-background,
            var(--ion-background-color, #fff)
        );
    }
}

ion-toolbar {
    --background: var(--ion-color-light);
    margin: 10px 0;
}

ion-searchbar {
    padding: 0;
    background-color: var(
        --ion-toolbar-background,
        var(--ion-background-color, #fff)
    );
    --box-shadow: 0 2px 2px 0 hsla(0, 0%, 0%, 0.2);
}

div.container.center-container {
    display: flex;
    flex-direction: column;
    text-align: center;
}

div.container {
    overflow: auto;
}

